    * FIX: Fixed encoding problem in "custom notification" message
    * New configuration parameter page_heading for the HTML page heads
      of the main frameset (%s will be replaced with OMD site name)
    * FIX: Fix problem where snapins where invisible
    * FIX: Fixed multisite timeout errors when nagios not running
    * Sidebar: some new layout improvements

    BI
    * FIX: Fixed filtering of Single-Host Aggregations
    * New sorter for aggregation group
    * FIX: fix sorting of Single-Host Aggregations after group
    * Avoid duplicate rule incarnations when using FOREACH_*
    * BI Boxes: allow closing boxes (not yet persisted)
    * New filter for services (not) contained in any aggregate
    * Configure sorting for all BI views

    Checks & Agents:
    * FIX: snmp_uptime handles empty snmp information without exception
    * FIX: Oracle checks try to handle ORA-* errors reported by the agent
      All oracle checks will return UNKNOWN when finding an ORA-* message
    * FIX: filesystem levels set via WATO didn't work, but do now
    * FIX: Group filters can handle groups without aliases now
    * nfsmounts: Added nfs4 support thanks to Thorsten Hintemann
    * megaraid_pdisks megaraid_ldisks: Support for Windows.  Thanks to Josef Hack

1.2.0b1:
    Core, Setup, etc.:
    * new tool 'livedump' for dumping configuration and status
      information from one monitoring core and importing this
      into another.
    * Enable new check registration API (not yet used in checks)
    * FIX: fix handling of prefix-tag rules (+), needed for WATO
    * FIX: handle buggy SNMP devices with non-consecutive OIDS
      (such as BINTEC routers)
    * Check API allows a check to get node information
    * FIX: fix problem with check includes in subchecks
    * Option --checks now also applies to ad-hoc check (e.g.
      cmk --checks=mrpe,df -v somehost)
    * check_mk_templates.cfg: added s to notification options
      of host and service (= downtime alerts)
